--- a/reflection.html
+++ b/reflection.html
@@ -67,22 +67,21 @@
         <a href="reflection.html">Reflection</a>
     </nav>
     <div class="container">
-        <section id="self-assessment">
-            <h2>Self-assessment</h2>
-            <h3>System Design</h3>
-            <p><strong>1. Overall</strong></p>
-            <p>With feedback and grade, the initial design lack of completed tasks.</p>
-            <p>Considering the quality of findings, the expertise to a certain level is not achieved, and it needs to improve.</p>
-            <p><strong>2. Understanding</strong></p>
-            <p>Even though I cited and referred to some external knowledge, it cannot be confidently said that those were correctly implemented in my work.</p>
-            <p>Since I lack fundamental knowledge, which partially were satisfied through previous modules, I may needed more time and effort to fill up such scarcity.</p>
-            <p>However, I tried to simplify the whole process, which eventually became a final design that can be compiled as Python codes.</p>
-            
-            <h3>System Implementation</h3>
-            <p><strong>1. Overall</strong></p>
-            <p>Although the design lacked essential details, the outcome did work as I intended.</p>
-            <p>The final code is very simplified with very basic logical decisions for the car to decide, however, it provides a satisfying decision-making process with the given situation of simulating the image.</p>
-            <p><strong>2. Understanding</strong></p>
-            <p>Based on the system design, I executed the coding process successfully, even if the outcome could not reach a certain level to present expertise enough.</p>
-            <p>As it was coded based on the simplified design, there were only a few difficulties to overcome, which then were acquired from external sources.</p>
-            <p>To conclude, considering how simplified the
+        <section id="reflection-content">
+            <h2>Reflection</h2>
+            <h3>Summary of Learning Outcomes</h3>
+            <p>Throughout this module, I gained significant insights into secure application development, particularly in designing systems that emphasise encryption and secure functionalities...</p>
+            <h3>Feedback from Tutors</h3>
+            <p>The feedback from Dr. Cathryn Peoples highlighted several key points...</p>
+            <h3>Other Artefacts Developed During the Module</h3>
+            <p>During the module, I developed several artefacts that contributed to my understanding of secure application development...</p>
+            <h3>How did working on this module make you feel?</h3>
+            <p>Working on this module evoked a mix of emotions, ranging from initial confidence to frustration and eventual determination...</p>
+            <h3>Is there an accurate use of citations and references throughout this piece of work?</h3>
+            <p>The assignment adhered to academic integrity standards, with accurate citations and references provided for all external sources...</p>
+            <h3>Conclusion</h3>
+            <p>Overall, this module provided valuable insights into secure application development and highlighted critical areas for improvement...</p>
+        </section>
+    </div>
+</body>
+</html>
