--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ePortfolio</title>
+    <title>My ePortfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,41 +34,23 @@
             color: black;
         }
         .container {
-            width: 80%;
-            margin: auto;
-            padding: 20px;
-        }
-        section {
-            margin-bottom: 20px;
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 10px 0;
+            padding: 2em;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>ePortfolio</h1>
+        <h1>Welcome to My ePortfolio</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="self_assessment.html">Self Assessment</a>
-        <a href="system_implementation.html">System Implementation</a>
-        <a href="system_testing.html">System Testing</a>
+        <a href="Self%20Assessment.html">Self Assessment</a>
+        <a href="System%20Implementation.html">System Implementation</a>
+        <a href="System%20Testing.html">System Testing</a>
     </nav>
     <div class="container">
-        <section>
-            <h2>Welcome to My ePortfolio</h2>
-            <p>This ePortfolio showcases my work in secure application development and testing. Navigate through the links above to explore each section in detail.</p>
-
-        </section>
+        <h2>About This Portfolio</h2>
+        <p>This portfolio showcases my journey in the Software Engineering module, covering self-assessment, system implementation, and testing methodologies.</p>
     </div>
 </body>
 </html>
