--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <h1>Welcome to My ePortfolio</h1>
     </header>
     <nav>
-        <a href="Self%20Assessment.html">Self Assessment</a>
-        <a href="System%20Implementation.html">System Implementation</a>
-        <a href="System%20Testing.html">System Testing</a>
+        <a href="SelfAssessment.html">Self Assessment</a>
+        <a href="Coding.html">Coding</a>
+        <a href="20Testing.html">Testing</a>
     </nav>
     <div class="container">
         <h2>About This Portfolio</h2>
-        <p>This portfolio showcases my journey in the Software Engineering module, covering self-assessment, system implementation, and testing methodologies.</p>
+        <p>This portfolio showcases my journey in the Software Engineering module, covering self-assessment, coding and testing.</p>
     </div>
 </body>
 </html>
