Update and rename Self%20Assessment.html to SelfAssessment.html

--- a/SelfAssessment.html
+++ b/SelfAssessment.html
@@ -27,25 +27,23 @@
         <h1>Self Assessment</h1>
     </header>
     <div class="container">
-        <section id="self-assessment">
-            <h2>Self-assessment</h2>
+        <section id="Self Assessment">
+            <h2>Self assessment</h2>
             <h3>System Design</h3>
             <p><strong>1. Overall</strong></p>
-            <p>With feedback and grade, the initial design lack of completed tasks.</p>
             <p>Considering the quality of findings, the expertise to a certain level is not achieved, and it needs to improve.</p>
             <p><strong>2. Understanding</strong></p>
             <p>Even though I cited and referred to some external knowledge, it cannot be confidently said that those were correctly implemented in my work.</p>
-            <p>Since I lack fundamental knowledge, which partially were satisfied through previous modules, I may needed more time and effort to fill up such scarcity.</p>
-            <p>However, I tried to simplify the whole process, which eventually became a final design that can be compiled as Python codes.</p>
+            <p>Despite the effort, my knowledge did not reach to a certain level to achieve successful outcome.</p>
+            <p>However, I tried to simplify the whole process, which eventually was completed as Python code.</p>
             
-            <h3>System Implementation</h3>
+            <h3>Testing</h3>
             <p><strong>1. Overall</strong></p>
             <p>Although the design lacked essential details, the outcome did work as I intended.</p>
-            <p>The final code is very simplified with very basic logical decisions for the car to decide, however, it provides a satisfying decision-making process with the given situation of simulating the image.</p>
+            <p>However, since the fundamental knowledge and the base lack expertise, the testing has also been conducted with a very limited scope.</p>
             <p><strong>2. Understanding</strong></p>
-            <p>Based on the system design, I executed the coding process successfully, even if the outcome could not reach a certain level to present expertise enough.</p>
-            <p>As it was coded based on the simplified design, there were only a few difficulties to overcome, which then were acquired from external sources.</p>
-            <p>To conclude, considering the extent how I simplified the design, the final piece has been successfully working.</p>
+            <p>Considering my understanding, I have not successfully conducted testings for requested scenarios.</p>
+            <p>To conclude, considering the extent how I simplified the design, the final piece did work at some point, however, it was not enough to be an successful implementation of an application.</p>
     </div>
 </body>
 </html>
