--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav>
         <a href="SelfAssessment.html">Self Assessment</a>
         <a href="Coding.html">Coding</a>
-        <a href="20Testing.html">Testing</a>
+        <a href="Testing.html">Testing</a>
     </nav>
     <div class="container">
         <h2>About This Portfolio</h2>
