--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="container">
         <h2>About This Portfolio</h2>
         <p>This portfolio showcases my journey in the Software Engineering module, covering self-assessment, coding and testing.</p>
+        <p>Please follow menu above to be directed to each page.</p>
     </div>
 </body>
 </html>
